Case Form Updated

--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div id = "cases-container">
-        
+    </div>
+
+    <div id = "case-form">
     </div>
 </body>
 </html>
