--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -5,11 +5,19 @@
     <title>Crime Shit</title>
     <script src=src/index.js></script>
     <script src=src/case.js></script>
-
+    <link rel ="stylesheet" href="styles/main.css">
    
 </head>
 <body>
-    <div id = "cases-container">
+    <div id = "missing-person">
+    </div>
+    <div id = "criminal">
+    </div>
+    <div id = "serial-killer">
+    </div>
+    <div id = "unsolved">
+    </div>
+    <div id = "closed-case">
     </div>
 
     <div id = "case-form">
