--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -9,7 +9,11 @@
    
 </head>
 <body>
-    <div id = "missing-person">
+
+    <div id = "cases-container"></div>
+
+<!--  
+  <div id = "missing-person">
     </div>
     <div id = "criminal">
     </div>
@@ -18,9 +22,9 @@
     <div id = "unsolved">
     </div>
     <div id = "closed-case">
-    </div>
+    </div> -->
 
     <div id = "case-form">
-    </div>
+    </div> 
 </body>
 </html>
