Categories Class Created.

--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -5,6 +5,7 @@
     <title>Crime Shit</title>
     <script src=src/index.js></script>
     <script src=src/case.js></script>
+    <script src=src/category.js></script>
     <link rel ="stylesheet" href="styles/main.css">
    
 </head>
@@ -23,6 +24,9 @@
     </div>
     <div id = "closed-case">
     </div> -->
+    <div id = "category-container">
+        
+    </div>
 
     <div id = "case-form">
     </div> 
