Categories are fetching

--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -24,9 +24,7 @@
     </div>
     <div id = "closed-case">
     </div> -->
-    <div id = "category-container">
-        
-    </div>
+    <div id = "category-container"> </div>
 
     <div id = "case-form">
     </div> 
