Buttons for cases functioning

--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-    <div id = "cases-container"></div>
+    <div id = "cases-container">
+        <h4> Name: </h4>
+    </div>
+  
 
 <!--  
   <div id = "missing-person">
@@ -24,9 +27,24 @@
     </div>
     <div id = "closed-case">
     </div> -->
-    <div id = "category-container"> </div>
+    <div id = "category-container"> 
+        <H4> Categories: </H4>
+
+        <!--  
+  <div id = "missing-person">
+    </div>
+    <div id = "criminal">
+    </div>
+    <div id = "serial-killer">
+    </div>
+    <div id = "unsolved">
+    </div>
+    <div id = "closed-case">
+    </div> -->
+    </div>
 
     <div id = "case-form">
+        <h4> Add Your Own Case! </h4>
     </div> 
 </body>
 </html>
