--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -42,8 +42,12 @@
     <div id = "closed-case">
     </div> -->
     </div>
+    <p style="text-align:center">
+    <button id = "new-f-btn">  New Shit</button>
+</p>
 
     <div id = "case-form">
+       
         <h4> Add Your Own Case! </h4>
     </div> 
 </body>
