--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -25,8 +25,11 @@
     <button id = "new-f-btn" class = "btn-btn-dark"> Submit Your Own Case!</button>
 </p>
 
-
-
+<div class = "modal-bg">
+    <div class = "modal">
+      
+    </div>
+    </div>
 
 </div> 
 
