Moved render Case

--- a/crime/frontend/index.html
+++ b/crime/frontend/index.html
@@ -1,35 +1,35 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crime Shit</title>
-    <!-- <script src=src/index.js></script> -->
-    <script src=src/case.js></script>
-    <script src=src/category.js></script>
-    <script src=src/index.js></script>
-    <link rel ="stylesheet" href="styles/main.css">
-   
-</head>
-<header>
-    <img src="logo2.png">
-    </header>
-<body>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Crime After Crime</title>
+            <script src=src/case.js></script>
+            <script src=src/category.js></script>
+            <script src=src/index.js></script>
+            <link rel ="stylesheet" href="styles/main.css">
+        
+        </head>
 
-    <div id = "cases-container">
-    </div>
-  
-    <div id = "category-container"> 
-        <h2> Select A Case Category:</h2>
-        <div class = "modal-bg">
-            <div class = "modal">
-            </div>
-        </div>
-    </div>
-    <p style="text-align:center">   
-        <button id = "new-f-btn" class = "btn2-btn-dark"> Submit Your Own Case!</button>
-    </p>
+        <header>
+            <img src="logo2.png">
+        </header>
 
-    <div id = "case-form"> 
-    </div> 
-</body>
+        <body>
+                <div id = "cases-container"> </div>
+        
+                <div id = "category-container"> 
+                    <h2> Select A Case Category:</h2>
+                    <div class = "modal-bg">
+                            <div class = "modal">
+                            </div>
+                    </div>
+                </div>
+
+                <p style="text-align:center">   
+                    <button id = "new-f-btn" class = "btn2-btn-dark"> Submit Your Own Case!</button>
+                </p>
+
+                <div id = "case-form"> 
+                </div> 
+        </body>
 </html>
